added more to id template

--- a/frontend/id.html
+++ b/frontend/id.html
@@ -1,5 +1,18 @@
 <!-- frontend/id.html -->
 {{define "title"}} ID Template {{end}} {{define "content"}}
-<section class="id">
+<section class="s2ID">
+    <div class="idTitle">
+        <h1>Queens</h1>
+    </div>
+</section>
+
+<section class="idMain">
+    <div class="idInfo">
+        <img class="idImg" src="https://groupietrackers.herokuapp.com/api/images/queen.jpeg" alt="Artist Photo" height="500px" width="500px" />
+    </div>
+</section>
+
+<section class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19852.88776407874!2d0.0073149315185546656!3d51.538694867417796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a7fec27156f5%3A0x515546244ac5434f!2sEast%20London%20Crematorium%20and%20Cemetery!5e0!3m2!1sen!2suk!4v1694469407410!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
 {{end}}
