--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,10 @@
 {{define "title"}} Groupie Tracker {{end}} {{define "content"}}
 
+<section class="searchBar">
+  <input type="text" id="artistSearch" placeholder="Search for an artist...">
+  <button>Search</button>
+</section>
+
 <section class="s2">
   <div class="s2Showcase">
     {{range .Artists}}
