nearly finished template

--- a/frontend/id.html
+++ b/frontend/id.html
@@ -8,7 +8,27 @@
 
 <section class="idMain">
     <div class="idInfo">
-        <img class="idImg" src="https://groupietrackers.herokuapp.com/api/images/queen.jpeg" alt="Artist Photo" height="500px" width="500px" />
+        <div class="idImgContainer">
+            <img class="idImg" src="https://groupietrackers.herokuapp.com/api/images/queen.jpeg" alt="Artist Photo" height="400px" width="400px" />
+        </div>
+
+        <div class="idTextContainer">
+            <h2>Members:</h2>
+            <ul class="artistMembers">
+                <li>Freddie Mercury</li>
+                <li>Brian May</li>
+                <li>John Daecon</li>
+                <li>Roger Meddows-Taylor</li>
+                <li>Mike Grose</li>
+                <li>Barry Mitchell</li>
+                <li>Doug Fogie</li>
+            </ul>
+            <h2>Tour Dates:</h2>
+            <ul class="tourDates">
+                <li>dunedin-new_zealand:<br> 10-02-2020</li>
+                <li>penrose-new_zealand:<br> 07-02-2020</li>
+            </ul>
+        </div>
     </div>
 </section>
 
