--- a/frontend/id.html
+++ b/frontend/id.html
@@ -10,10 +10,13 @@
     <div class="idInfo">
         <div class="idImgContainer">
             <img class="idImg" src="https://groupietrackers.herokuapp.com/api/images/queen.jpeg" alt="Artist Photo" height="400px" width="400px" />
+            <div class="idImgText">
+                <span>Founded:1970 <br> Debut Album: Date</span>
+            </div>
         </div>
 
         <div class="idTextContainer">
-            <h2>Members:</h2>
+            <h2 class="idMembers">Members:</h2>
             <ul class="artistMembers">
                 <li>Freddie Mercury</li>
                 <li>Brian May</li>
@@ -23,7 +26,7 @@
                 <li>Barry Mitchell</li>
                 <li>Doug Fogie</li>
             </ul>
-            <h2>Tour Dates:</h2>
+            <h2 class="idTourDates">Tour Dates:</h2>
             <ul class="tourDates">
                 <li>dunedin-new_zealand:<br> 10-02-2020</li>
                 <li>penrose-new_zealand:<br> 07-02-2020</li>
