group page, routing ?id= , passing data to page

--- a/frontend/group.html
+++ b/frontend/group.html
@@ -1,41 +1,62 @@
 <!-- frontend/id.html -->
 {{define "title"}} ID Template {{end}} {{define "content"}}
 <section class="s2ID">
-    <div class="idTitle">
-        <h1>Queens</h1>
-    </div>
+  <div class="idTitle">
+    <h1>{{.Name}}</h1>
+  </div>
 </section>
 
 <section class="idMain">
-    <div class="idInfo">
-        <div class="idImgContainer">
-            <img class="idImg" src="https://groupietrackers.herokuapp.com/api/images/queen.jpeg" alt="Artist Photo" height="400px" width="400px" />
-            <div class="idImgText">
-                <span>Founded:1970 <br> Debut Album: Date</span>
-            </div>
-        </div>
-
-        <div class="idTextContainer">
-            <h2 class="idMembers">Members:</h2>
-            <ul class="artistMembers">
-                <li>Freddie Mercury</li>
-                <li>Brian May</li>
-                <li>John Daecon</li>
-                <li>Roger Meddows-Taylor</li>
-                <li>Mike Grose</li>
-                <li>Barry Mitchell</li>
-                <li>Doug Fogie</li>
-            </ul>
-            <h2 class="idTourDates">Tour Dates:</h2>
-            <ul class="tourDates">
-                <li>dunedin-new_zealand:<br> 10-02-2020</li>
-                <li>penrose-new_zealand:<br> 07-02-2020</li>
-            </ul>
-        </div>
+  <div class="idInfo">
+    <div class="idImgContainer">
+      <img
+        class="idImg"
+        src="{{.Image}}"
+        alt="Artist Photo"
+        height="400px"
+        width="400px"
+      />
+      <div class="idImgText">
+        <span
+          >Founded: {{.CreationDate}} <br />
+          Debut Album: {{.FirstAlbum}}</span
+        >
+      </div>
     </div>
+
+    <div class="idTextContainer">
+      <h2 class="idMembers">Members:</h2>
+      <ul class="artistMembers">
+        {{range $member := .Members}}
+        <li>{{$member}}</li>
+        {{end}}
+      </ul>
+      <h2 class="idTourDates">Tour Dates:</h2>
+      <ul class="tourDates">
+        {{range $location, $dates := .DatesLocations}}
+        <li>
+          {{$location}}:<br />
+          <ul>
+            {{range $a := $dates}}
+            <li>{{$a}}</li>
+            {{end}}
+          </ul>
+        </li>
+        {{end}}
+      </ul>
+    </div>
+  </div>
 </section>
 
 <section class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19852.88776407874!2d0.0073149315185546656!3d51.538694867417796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a7fec27156f5%3A0x515546244ac5434f!2sEast%20London%20Crematorium%20and%20Cemetery!5e0!3m2!1sen!2suk!4v1694469407410!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19852.88776407874!2d0.0073149315185546656!3d51.538694867417796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a7fec27156f5%3A0x515546244ac5434f!2sEast%20London%20Crematorium%20and%20Cemetery!5e0!3m2!1sen!2suk!4v1694469407410!5m2!1sen!2suk"
+    width="100%"
+    height="450"
+    style="border: 0"
+    allowfullscreen=""
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade"
+  ></iframe>
 </section>
 {{end}}
