--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <div class="s2Showcase">
     {{range .Artists}}
     <article class="musicShowcase flashcard">
-      <a href="/group?={{.ID}}">
+      <a href="/group?id={{.ID}}">
         <div class="front">
           <div class="musicImg">
             <img src="{{.Image}}" alt="{{.Name}}" />
