google maps backend

--- a/frontend/group.html
+++ b/frontend/group.html
@@ -47,16 +47,46 @@
     </div>
   </div>
 </section>
+<script
+  async
+  src="https://maps.googleapis.com/maps/api/js?key=YOURTOKENHERE2&callback=initMap"
+></script>
 
 <section class="map">
-  <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19852.88776407874!2d0.0073149315185546656!3d51.538694867417796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a7fec27156f5%3A0x515546244ac5434f!2sEast%20London%20Crematorium%20and%20Cemetery!5e0!3m2!1sen!2suk!4v1694469407410!5m2!1sen!2suk"
-    width="100%"
-    height="450"
+  <div
+    id="google-maps-api-map"
+    style="width: 100%; height: 450"
     style="border: 0"
     allowfullscreen=""
     loading="lazy"
     referrerpolicy="no-referrer-when-downgrade"
-  ></iframe>
+  ></div>
 </section>
+
+<script>
+  const locations = [
+    { lat: 46.233226, lng: 6.055737 },
+    { lat: 46.2278, lng: 6.051 },
+    { lat: 46.23336, lng: 6.0471 },
+  ];
+  function initMap() {
+    const map = new google.maps.Map(
+      document.getElementById("google-maps-api-map"),
+      {
+        center: {
+          lat: 46.231226,
+          lng: 6.051737,
+        },
+        zoom: 14,
+      }
+    );
+
+    locations.forEach((location) => {
+      new google.maps.Marker({
+        position: location,
+        map: map,
+      });
+    });
+  }
+</script>
 {{end}}
