--- a/frontend/group.html
+++ b/frontend/group.html
@@ -49,7 +49,7 @@
 </section>
 <script
   async
-  src="https://maps.googleapis.com/maps/api/js?key=YOURTOKENHERE2&callback=initMap"
+  src="https://maps.googleapis.com/maps/api/js?key={{.GMapsToken}}&callback=initMap"
 ></script>
 
 <section class="map">
@@ -64,11 +64,24 @@
 </section>
 
 <script>
-  const locations = [
-    { lat: 46.233226, lng: 6.055737 },
-    { lat: 46.2278, lng: 6.051 },
-    { lat: 46.23336, lng: 6.0471 },
+  var golangVar2 = [
+    "{{range .CoordinatesArr}}",
+    { lat: "{{.Lng}}", lng: "{{.Lat}}" },
+    "{{end}}",
   ];
+  // remove "" and change the data types
+  var filteredArray = golangVar2
+    .filter(function (item) {
+      return item !== "";
+    })
+    .map(function (item) {
+      return {
+        lat: parseFloat(item.lat),
+        lng: parseFloat(item.lng),
+      };
+    });
+  console.log(filteredArray);
+
   function initMap() {
     const map = new google.maps.Map(
       document.getElementById("google-maps-api-map"),
@@ -81,7 +94,7 @@
       }
     );
 
-    locations.forEach((location) => {
+    filteredArray.forEach((location) => {
       new google.maps.Marker({
         position: location,
         map: map,
