Comment lines deleted

--- a/frontend/group.html
+++ b/frontend/group.html
@@ -80,7 +80,7 @@
         lng: parseFloat(item.lng),
       };
     });
-  console.log(filteredArray[0]["lat"]);
+  //console.log(filteredArray[0]["lat"]);
 
   function initMap() {
     const map = new google.maps.Map(
