performance and certificate

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
       <a href="/group?id={{.ID}}">
         <div class="front">
           <div class="musicImg">
-            <img src="{{.Image}}" alt="{{.Name}}" />
+            <img src="{{.Image}}" alt="{{.Name}}" width="240" height="240" />
           </div>
           <div class="musicContent">
             <div class="section">
