--- a/frontend/layout.html
+++ b/frontend/layout.html
@@ -1,9 +1,10 @@
 {{define "layout"}}
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>{{template "title" .}}</title>
     <link rel="stylesheet" href="/static/style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <header class="headerHeader">
@@ -15,7 +16,7 @@
           href="/"
         >
           <img
-            src="images/01FCLogo.svg"
+            src="images/01FCLogo.webp"
             alt="Logo SVG"
             width="40"
             height="40"
@@ -24,7 +25,12 @@
         </a>
         <ul class="headerList">
           <li>
-            <a class="donateButton" href="https://www.buymeacoffee.com/01founderscrack" title="Donate" aria-label="donate">
+            <a
+              class="donateButton"
+              href="https://www.buymeacoffee.com/01founderscrack"
+              title="Donate"
+              aria-label="donate"
+            >
               <span class="donateElement">Support Us!</span>
             </a>
           </li>
