frontend containers added

--- a/frontend/group.html
+++ b/frontend/group.html
@@ -1,103 +1,9 @@
-<!-- frontend/id.html -->
+<!-- frontend/group.html -->
 {{define "title"}} ID Template {{end}} {{define "content"}}
+
 <section class="s2ID">
   <div class="idTitle">
     <h1>{{.Name}}</h1>
   </div>
 </section>
-
-<section class="idMain">
-  <div class="idInfo">
-    <div class="idImgContainer">
-      <img
-        class="idImg"
-        src="{{.Image}}"
-        alt="Artist Photo"
-        height="400px"
-        width="400px"
-      />
-      <div class="idImgText">
-        <span
-          >Founded: {{.CreationDate}} <br />
-          Debut Album: {{.FirstAlbum}}</span
-        >
-      </div>
-    </div>
-
-    <div class="idTextContainer">
-      <h2 class="idMembers">Members:</h2>
-      <ul class="artistMembers">
-        {{range $member := .Members}}
-        <li>{{$member}}</li>
-        {{end}}
-      </ul>
-      <h2 class="idTourDates">Tour Dates:</h2>
-      <ul class="tourDates">
-        {{range $location, $dates := .DatesLocations}}
-        <li>
-          {{$location}}:<br />
-          <ul>
-            {{range $a := $dates}}
-            <li>{{$a}}</li>
-            {{end}}
-          </ul>
-        </li>
-        {{end}}
-      </ul>
-    </div>
-  </div>
-</section>
-
-<script
-  async
-  src="https://maps.googleapis.com/maps/api/js?key={{.GMapsToken}}&callback=initMap"
-></script>
-
-<section class="map">
-  <div
-    id="google-maps-api-map"
-    style="width: 100%; height: 450px"
-    allowfullscreen=""
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade"
-  ></div>
-</section>
-
-<script>
-  function initMap() {
-    var golangVar2 = [
-      "{{range .CoordinatesArr}}",
-      { lat: "{{.Lng}}", lng: "{{.Lat}}" },
-      "{{end}}",
-    ];
-    // remove "" and change the data types
-    var filteredArray = golangVar2
-      .filter(function (item) {
-        return item !== "";
-      })
-      .map(function (item) {
-        return {
-          lat: parseFloat(item.lat),
-          lng: parseFloat(item.lng),
-        };
-      });
-    const map = new google.maps.Map(
-      document.getElementById("google-maps-api-map"),
-      {
-        center: {
-          lat: filteredArray[0]["lat"],
-          lng: filteredArray[0]["lng"],
-        },
-        zoom: 3,
-      }
-    );
-
-    filteredArray.forEach((location) => {
-      new google.maps.Marker({
-        position: location,
-        map: map,
-      });
-    });
-  }
-</script>
-{{end}}
+{{template "group_info" .}} {{template "google_maps" .}} {{end}}
